added a mobile version for the main image

--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
 
       <div class="stats">
         <div>
-          <h4 class="stat-numbers">10k+</h4>
-          <p>companies</p>
+          <h4>10k+</h4>
+          <p class="stat-numbers">companies</p>
         </div>
         <div>
-          <h4 class="stat-numbers">314</h4>
-          <p>templates</p>
+          <h4 >314</h4>
+          <p class="stat-numbers">templates</p>
         </div>
         <div>
-          <h4 class="stat-numbers">12m+</h4>
-          <p>queries</p>
+          <h4 >12M+</h4>
+          <p class="stat-numbers">queries</p>
         </div>
       </div>
     </div>
 
-    <div class="img grid-2">
-      <img src="./images/image-header-desktop.jpg">
+    <div class="grid-2">
+      <img src="./images/image-header-desktop.jpg" class="img-desktop">
+      <img src="./images/image-header-mobile.jpg" class="img-mobile">
     </div>
   </main>
   
